# builderdaily

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: deploy-cloudflare-pages.yml
assets/: app.js  styles.css
data/: articles.js
docs/idea2biz_course/: 商业化-什么产品能赚钱.md
docs/wechat_daily/: ai-opportunity-daily-2026-05-15.md  ai-opportunity-daily-2026-05-16.md  ai-opportunity-daily-2026-05-18.md
docs/良辰美公众号/: 独立开发捞鱼方法论-去高密度水域.md
outputs/: aihot-all-recent7.json  aihot-candidates.txt  aihot-daily-2026-05-04.json  aihot-daily-2026-05-05.json  builderpulse-outline.txt  candidates-2026-05-06.txt  candidates-2026-05-07.txt  candidates-2026-05-08.txt  candidates-2026-05-09.txt  candidates-2026-05-10.txt  extracted_clean.txt  extracted_clean_pass.txt  extracted_raw.txt  paid-products-analysis.md  prospect-audits-2026-05-18-discover.ps1  prospect-audits-2026-05-18-run.ps1  recent10-signals.json  wordpress-ai-internal-link-agent-prd.md
outputs/builderpulse/: 2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md
outputs/demo-internal-link-audit/: report.md  suggestions.csv
outputs/prospect-audits-2026-05-18/: lead-audit-results.csv  lead-audit-results.json  outreach-sent-log.md  prospect-lead-report.md  prospect-leads.csv  prospect-leads.json
samples/: demo_site.csv
tests/: test_analyzer.py  test_cli.py  test_importers.py  test_reporting.py  test_suggestions.py  test_web.py
website/: index.html
(+43 files in other folders)
